added support for Yamaha Extended Controls API and modified the control thread to return the response. Now works with my Zend library to control the AV device through PHP, response time is about 0.1s on the test system. Now I'll add to the smartphone app, for full control. Also tested the Yamaha AV with the DLNA server, it works.

--- a/src/mech/generic/upnp/Makefile
+++ b/src/mech/generic/upnp/Makefile
@@ -10,7 +10,7 @@ DSS_SRC = Upnp.cc Upnp_ushare.cc
 
 DSS_OBJ=$(DSS_SRC:.cc=.o)
 
-CXX = g++ $(CCFLAGS) -I ../../ -I../../../include  -I../../../icomm -I../../../baseServer -I ../../../classes  -I ../../../dpsio $(XMLINC) 
+CXX = g++ $(CCFLAGS) -I ushare/src -I ../../ -I../../../include  -I../../../icomm -I../../../baseServer -I ../../../classes  -I ../../../dpsio $(XMLINC) 
 
 OBJ :	libdssushare.so
 
